--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@
     background-color: orangered;
     color: #fff;
     border: 0px;
-    margin: 0 5px;
+    margin: 5px;
     padding: 8px;
     border-radius: 10px;
     cursor: pointer;
