--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,9 @@
   <body>
     <div class="header"></div>
     <slot />
+    <div class="alert">
+      Lütfen acil durumlar için <b>AFAD</b>'a ulaşınız!
+    </div>
   </body>
 </html>
 <style is:global>
@@ -45,5 +48,27 @@
     padding: 8px;
     border-radius: 10px;
     cursor: pointer;
+  }
+
+  .alert {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #ecd0d0;
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+    color: #333;
+    border-top: 1px solid #ccc;
+    z-index: 30;
+    width: 300px;
+    border-radius: 10px;
+  }
+
+  @media (max-width: 600px) {
+    .alert {
+      width: 100% !important;
+    }
   }
 </style>
