--- a/src/components/Map.astro
+++ b/src/components/Map.astro
@@ -170,7 +170,20 @@
       city: "HATAY",
       coordinates: [36.2, 36.16667],
     },
+    {
+      city: "ŞANLIURFA",
+      coordinates: [37.15, 38.8],
+    },
+    {
+      city: "KİLİS",
+      coordinates: [36.71667, 37.11667],
+    },
+    {
+      city: "DİYARBAKIR",
+      coordinates: [37.91417, 40.23056],
+    },
   ];
+
   const city = document.getElementById("city-control");
 
   CITIES.forEach((item) => {
