--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,19 @@
     <div class="header"></div>
     <slot />
     <div class="alert">
-      Lütfen acil durumlar için <b>AFAD</b>'a ulaşınız!
+      <span>
+        Lütfen acil durumlar için <b>AFAD</b>'a ulaşınız!
+      </span>
+      <a
+        href="https://afetharita.com/gizlilik.pdf"
+        target="_blank"
+        style="font-size: 11px;">Gizlilik Sözleşmesi</a
+      >
+      <a
+        href="https://afetharita.com/cerez.pdf"
+        target="_blank"
+        style="font-size: 11px;">Çerez Politikası</a
+      >
     </div>
     <button id="find-this-area">BU ALANI TARA</button>
   </body>
